# Arch_PC_Assistent

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
code/: final_model.py
code/notebooks/: EFT.ipynb  GRPO.ipynb  P0_extract_source.ipynb  P1_1_SFT_prompt_gen.ipynb  P1_2_SFT.ipynb  P2_1_RAG.ipynb  P3_1_prompt_generation.ipynb  P3_2_sampels_generation.ipynb  P3_3_samples_validation.ipynb  P3_4_RSFT.ipynb  P4_1_prompt_gen.ipynb  P4_2_samples_gen.ipynb  P4_3_samples_validation.ipynb  RAG.ipynb  RSFT.ipynb  extract_source.ipynb  low_para_val_model.ipynb  test.py
code/notebooks/arch_assistant_lora/: adapter_config.json
config/: Arch_Source_config.py  Source_config.py  __init__.py
docs/: docs.md  protocol.md  protocol_ger.md  result.md
embed_model/e9990075-a234-492d-8f4e-1834157f0a0e/: index_metadata.pickle
outputs/SFT/: README.md
