[project]
name = "arch-pc-assistent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "huggingface-hub>=1.12.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "transformers>=5.6.2",
    "unsloth>=2025.7.2",
]
