[project]
name = "arch-pc-assistent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "torch==2.10.0",
    "torchao==0.17.0",
    "torchvision==0.25.0",
    "trl==0.24.0",
    "unsloth==2026.4.8",
    "unsloth-zoo==2026.4.9",
    "xformers==0.0.35",
    "datasets==4.3.0",
    "transformers==5.5.0",
    "accelerate>=1.13.0",
    "huggingface-hub>=1.12.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "tensorboard>=2.20.0",
    "anthropic>=0.97.0",
    "python-dotenv>=1.2.2",
    "trafilatura>=2.0.0",
    "openai>=2.33.0",
    "langchain-text-splitters>=1.1.2",
    "chromadb>=1.5.9",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.4.1",
    "rich>=15.0.0",
    "prompt-toolkit>=3.0.52",
]
